<resources>
    <string name="app_name">Doppel-Moppel</string>
    <string name="title_home">TC-Halver 1960</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="headline"><b>Doppel Moppel</b></string>
    <string name="participants">Participants:</string>
    <string name="btn_enterParticipant">Confirm</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_deleteParticipant">Delete Participant</string>
    <string name="btn_import">Import List</string>\
    <string name="btn_export">Export List</string>
</resources>